--- a/css/produto.css
+++ b/css/produto.css
@@ -5,6 +5,7 @@
     border-radius: 50%;
     width: 50px;
     height: 50px;
+    box-sizing: border-box;
 }
 label[for=verde]::after {
     background-color: #33cc66;
@@ -14,4 +15,7 @@ label[for=rosa]::after{
 }
 label[for=azul]::after{
     background-color: #6666FF;
+}
+.cores input:checked + label::after{
+    border: 6px solid rgba(0, 0, 0, 0.3);
 }
