--- a/css/produto.css
+++ b/css/produto.css
@@ -19,3 +19,6 @@ label[for=azul]::after{
 .cores input:checked + label::after{
     border: 6px solid rgba(0, 0, 0, 0.3);
 }
+.cores input[type=radio] {
+    display: none;
+}
