--- a/css/produto.css
+++ b/css/produto.css
@@ -22,3 +22,6 @@ label[for=azul]::after{
 .cores input[type=radio] {
     display: none;
 }
+.cores input:not(:checked) + label img{
+    display: none;
+}
