--- a/css/produto.css
+++ b/css/produto.css
@@ -6,15 +6,20 @@
     width: 50px;
     height: 50px;
     box-sizing: border-box;
+    position: absolute;
+    top: 30px;
 }
 label[for=verde]::after {
     background-color: #33cc66;
+    left: 0;
 }
 label[for=rosa]::after{
     background-color: #ff6666;
+    left: 60px;
 }
 label[for=azul]::after{
     background-color: #6666FF;
+    left: 120px;
 }
 .cores input:checked + label::after{
     border: 6px solid rgba(0, 0, 0, 0.3);
@@ -24,4 +29,8 @@ label[for=azul]::after{
 }
 .cores input:not(:checked) + label img{
     display: none;
+}
+.cores{
+    position: relative;
+    padding-top: 90px;
 }
