--- a/css/produto.css
+++ b/css/produto.css
@@ -84,3 +84,31 @@ label[for=azul]::after {
     display: block;
     max-width: 100%;
 }
+@media (min-width: 630px){
+    .produto{
+        position: relative;
+        padding-left: 40%;
+    }
+    .cores{
+        position: static;
+        padding: 0;
+    }
+    .cores legend{
+        position: static;
+    }
+    .cores label img{
+        position: absolute;
+        top: 0;
+        left: 0;
+        max-width: 35%;
+        max-height: 100%;
+    }
+    .cores label::after{
+        position: static;
+        float: left;
+        margin-right: 10px;
+    }
+    .produto{
+        font-size: 1.2em;
+    }
+}
