--- a/css/produto.css
+++ b/css/produto.css
@@ -84,6 +84,41 @@ label[for=azul]::after {
     display: block;
     max-width: 100%;
 }
+.detalhes {
+    padding: 2em 0;
+}
+.detalhes h2 {
+    font-size: 1.5em;
+    line-height: 2;
+}
+.detalhes p {
+    margin: 1em 0;
+    font-size: 1em;
+    line-height: 1.5;
+    max-width: 36em;
+}
+table {
+    border-spacing: 0.2em;
+    border-collapse: separate;
+}
+thead {
+    background-color: #999;
+}
+thead th {
+    font-weight: bold;
+    padding: 0.3em 1em;
+    text-align: center;
+}
+td {
+    padding: 0.3em;
+}
+tr:nth-child(2n) {
+    background-color: #ccc;
+}
+td:first-child {
+    font-style: italic;
+}
+ 
 @media (min-width: 630px){
     .produto{
         position: relative;
