--- a/css/produto.css
+++ b/css/produto.css
@@ -1,3 +1,8 @@
+.produto-back {
+    background-color: #f2f2f2;
+    margin-top: 1em;
+    border-top: 2px solid #ccc;
+}
 .produto {
     color: #333;
     line-height: 1.3;
@@ -83,6 +88,7 @@ label[for=azul]::after {
 .cores label img {
     display: block;
     max-width: 100%;
+    border: 2px solid #ccc;
 }
 .detalhes {
     padding: 2em 0;
