--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -9,7 +9,9 @@
  */
 
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
-
+.form-control:invalid{
+  border: 1px solid #cc0000;
+}
 article,
 aside,
 details,
