--- a/css/produto.css
+++ b/css/produto.css
@@ -144,6 +144,18 @@ td:first-child {
     font-style: italic;
 }
 
+.tamanhos output {
+    display: inline-block;
+    height: 44px;
+    width: 44px;
+    line-height: 44px;
+    text-align: center;
+
+    border: 3px solid #666;
+    border-radius: 60%;
+    color: #555;
+}
+
 @media (min-width: 630px) {
     .produto {
         position: relative;
@@ -178,4 +190,5 @@ td:first-child {
         min-width: 240px;
         width: 45%;
     }
+
 }
